<resources>
    <string name="app_name">MP-Project</string>
    <string name="app_title">قفسه</string>
    <string name="splash_text">هر آنچه از کتاب نیاز داری</string>
    <string name="related_ads">آگهی های مرتبط</string>
    <string name="advertisement_search_bar_hint">جست و جو در آگهی ها</string>
    <string name="book_search_bar_hint">جست و جو در کتاب ها</string>
    <string name="add_comment">ثبت نظر</string>
    <string name="like">پسندیدم</string>
    <string name="dislike">نپسندیدم</string>
    <string name="phoneNumber">شماره تماس :</string>
    <string name="price">قیمت :</string>
    <string name="city">شهر :</string>
    <string name="register">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="inputEmail">لطفا ایمیل خود را وارد کنید</string>
    <string name="inputPassword">لطفا رمز خود را وارد کنید</string>
    <string name="inputPasswordRepeat">لطفا رمز خود را تکرار کنید</string>
    <string name="loginRegisterText"> ثبت نام کنید</string>
    <string name="registerLoginText">قبلا ثبت نام کرده اید؟</string>

    <string name="add_label">افزودن آگهی</string>
    <string name="add_title">عنوان آگهی</string>
    <string name="add_book_name">اسم کتاب</string>
    <string name="add_phoneNumber">شماره موبایل</string>
    <string name="add_price">قیمت (تومان)</string>
    <string name="add_city">شهر</string>
    <string name="add_description">توضیحات</string>
    <string name="register_advertisement">ثبت آگهی</string>

    <string name="title_select_image_action">نوع ورودی را انتخاب کنید</string>
    <string name="lbl_camera">دوربین</string>
    <string name="lbl_gallery">گالری</string>
    <string name="advertisements">آگهی ها</string>
    <string name="books">کتاب ها</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string-array name="city_list">
        <item>تهران</item>
        <item>اصفهان</item>
        <item>مشهد</item>
        <item>تبریز</item>
        <item>یزد</item>
        <item>همدان</item>
        <item>زاهدان</item>
        <item>کرمان</item>
        <item>بوشهر</item>
        <item>اهواز</item>
    </string-array>


    <string-array name="sort_kind_list">
        <item>کمترین قیمت</item>
        <item>بیشترین قیمت</item>
        <item>زمان</item>
    </string-array>

    <string-array name="category_list">
        <item>ادبی</item>
        <item>درسی</item>
        <item>سیاسی</item>
        <item>تاریخی</item>
        <item>آشپزی</item>
        <item>علوم انسانی</item>
        <item>مهندسی</item>
        <item>اقتصادی</item>
    </string-array>

</resources>