<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    app:chainUseRtl="true">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_select_image_action"
        android:textColor="@color/gray_900"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/lbl_camera"
        android:textColor="@color/blue_gray_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_gallery"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView

        android:id="@+id/tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/lbl_gallery"
        android:textColor="@color/blue_gray_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/tv_camera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


</androidx.constraintlayout.widget.ConstraintLayout>