<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:background="@drawable/back3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/adPicture6"

            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/ic_baseline_login_24" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/adTitle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/black"

                android:textDirection="rtl"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginBottom="0dp"
                android:hint="@string/inputEmail"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/adPicture4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_alternate_email_24" />

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="8">
            <TextView
                android:id="@+id/adTitle12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginBottom="0dp"
                android:hint="@string/inputPassword"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/adPicture5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_lock_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="8">
            <TextView
                android:id="@+id/adTitle123"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="28sp" />
            <Button
                android:layout_weight="2"
                android:id="@+id/loginSubmitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="9">
            <TextView
                android:id="@+id/adTitle1234"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1.5"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="28sp" />
            <Button
                android:id="@+id/LoginRedirectToRegister"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/loginRegisterText"
                />

        </LinearLayout>





    </LinearLayout>


</ScrollView>