<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:background="@drawable/back3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <ImageView
            android:id="@+id/adPicture6"

            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/ic_baseline_app_registration_24" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/adTitle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/black"

                android:textDirection="rtl"
                android:textSize="28sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginBottom="0dp"
                android:hint="@string/inputEmail"
                android:textColorHint="@color/black"


                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerEmail"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart"
                    android:background="@color/teal_200"
                    android:textColor="@color/black"
                    android:textDirection="rtl"

                    android:textSize="20sp"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </com.google.android.material.textfield.TextInputLayout>



            <ImageView
                android:id="@+id/adPicture4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_alternate_email_24" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="8">
            <TextView
                android:id="@+id/adTitle12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="28sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginBottom="0dp"
                android:hint="@string/inputPassword"
                android:textColorHint="@color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPassword"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    android:background="@color/teal_200"
                    android:textColor="@color/black"
                    android:textDirection="rtl"

                    android:textSize="20sp"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </com.google.android.material.textfield.TextInputLayout>



            <ImageView
                android:id="@+id/adPicture5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_lock_24" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="8">
            <TextView
                android:id="@+id/adTitle1233"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="28sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regpassR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginBottom="0dp"
                android:hint="@string/inputPasswordRepeat"
                android:textColorHint="@color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPasswordRepeat"
                    android:inputType="textVisiblePassword"
                    android:textAlignment="textStart"
                    android:background="@color/teal_200"
                    android:textColor="@color/black"
                    android:textDirection="rtl"

                    android:textSize="20sp"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </com.google.android.material.textfield.TextInputLayout>



            <ImageView
                android:id="@+id/adPicture544"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_lock_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="8">
            <TextView
                android:id="@+id/adTitle123"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="28sp" />
            <com.google.android.material.button.MaterialButton
                app:backgroundTint="#223D8C"
                app:rippleColor="#ffee33"

                app:strokeColor="#13ACD1"
                app:strokeWidth="3dp"
                android:layout_weight="2"
                android:id="@+id/registerSubmitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="9">
            <TextView
                android:id="@+id/adTitle1234"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1.5"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="28sp" />
            <com.google.android.material.button.MaterialButton
                app:backgroundTint="#223D8C"
                app:rippleColor="#ffee33"

                app:strokeColor="#13ACD1"
                app:strokeWidth="3dp"
                android:id="@+id/registerRedirectToLogin"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/registerLoginText"
                />

        </LinearLayout>



    </LinearLayout>
</ScrollView>