<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/adViewPicture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/harry_potter_and_the_philosopher_s_stone" />

        <TextView
            android:id="@+id/adViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"

            android:text="پیش فرض عنوان"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/adViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="پیش فرض اسم کتاب"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/adViewCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="تهران"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/city"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/adViewPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="11111 تومان"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/price"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/adViewPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="09123456789"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/phoneNumber"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/adViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="این متن صرفا یه متن پیش فرض برای توضیحات است."
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textSize="14sp" />

    </LinearLayout>


</ScrollView>